# SATELLiTES

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  Run_SATELLiTES_Alpha3.py  pyproject.toml  requirements.txt
docs/: Installation-GUI.rst  Installation-KNIME.rst  Quick-Start.rst  conf.py  index.rst
gui/: tabs_2reagents.py  tabs_3reagents.py
knime/: SATELLiTES_conda_env.yml  SATELLiTES_conda_env_linux64.yml  SATELLiTES_conda_env_win64.yml  knime.yml  satellites_extension.py
knime/nodes/: satellites_2reagents_step1.py  satellites_2reagents_step1_MP.py  satellites_2reagents_step2.py  satellites_2reagents_step2_MP.py  satellites_3reagents_step1.py  satellites_3reagents_step1_MP.py  satellites_3reagents_step2.py  satellites_3reagents_step2_MP.py  satellites_3reagents_step3.py  satellites_3reagents_step3_MP.py  satellites_chosen.py  satellites_representative_byid.py  satellites_representative_custom.py  satellites_representative_smallest.py
knime_build/: content.xml.xz  p2.index
knime_bundled/: artifacts.xml.xz  content.xml.xz  p2.index
src/SATELLiTES/: SATELLiTES.py  SATELLiTES_enumeration.py  SATELLiTES_gui.py  SATELLiTES_style.css  SATELLiTES_tabs_2reagents.py  SATELLiTES_tabs_3reagents.py
src/SATELLiTES-SBDD/: SATELLiTES.py  SATELLiTES_enumeration.py  SATELLiTES_gui.py
src/SATELLiTES_SBDD.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/PCCL_reaction/: Aminotetrazoles_H16.smi  PCCL_test_infos.txt  ReagentsA_ATZ_H16.smi  ReagentsB_ATZ_H16.smi  ZincID_A_ATZ_H16.txt  ZincID_B_ATZ_H16.txt
testset/: tests_A_Cl.smi
(+7 files in other folders)
